add configs de swagger para user
